refactored auth & user handlers, added dtos
