# docs/swagger.json
@@ -33,7 +33,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.loginUserRequest"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.LoginUserRequest"
                         }
                     }
                 ],
@@ -41,7 +41,7 @@
                     "202": {
                         "description": "Accepted",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.authUserResponse"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.AuthUserResponse"
                         }
                     },
                     "400": {
@@ -85,7 +85,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.refreshAccessTokenRequest"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.RefreshAccessTokenRequest"
                         }
                     }
                 ],
@@ -93,7 +93,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.authUserResponse"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.AuthUserResponse"
                         }
                     },
                     "400": {
@@ -137,7 +137,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.registerUserRequest"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.RegisterUserRequest"
                         }
                     }
                 ],
@@ -145,7 +145,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.authUserResponse"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.AuthUserResponse"
                         }
                     },
                     "400": {
@@ -1436,7 +1436,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_transport_http_v1.getUserResponse"
+                            "$ref": "#/definitions/github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.GetUserResponse"
                         }
                     },
                     "400": {
@@ -1471,13 +1471,57 @@
         }
     },
     "definitions": {
-        "internal_transport_http_v1.authUserResponse": {
+        "github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.AuthUserResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
                     "type": "string"
                 },
                 "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.GetUserResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.LoginUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.RefreshAccessTokenRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_ali-nur31_mile-do_internal_transport_http_v1_dto.RegisterUserRequest": {
+            "type": "object",
+            "properties": {
+                "confirm_password": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -1513,17 +1557,6 @@
                 },
                 "user_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "internal_transport_http_v1.getUserResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "$ref": "#/definitions/pgtype.Timestamp"
-                },
-                "email": {
-                    "type": "string"
                 }
             }
         },
@@ -1618,17 +1651,6 @@
                 }
             }
         },
-        "internal_transport_http_v1.loginUserRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "internal_transport_http_v1.recurringTasksTemplateData": {
             "type": "object",
             "properties": {
@@ -1693,28 +1715,6 @@
                 },
                 "user_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "internal_transport_http_v1.refreshAccessTokenRequest": {
-            "type": "object",
-            "properties": {
-                "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "internal_transport_http_v1.registerUserRequest": {
-            "type": "object",
-            "properties": {
-                "confirm_password": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
                 }
             }
         },
@@ -1874,35 +1874,6 @@
                 },
                 "title": {
                     "type": "string"
-                }
-            }
-        },
-        "pgtype.InfinityModifier": {
-            "type": "integer",
-            "format": "int32",
-            "enum": [
-                1,
-                0,
-                -1
-            ],
-            "x-enum-varnames": [
-                "Infinity",
-                "Finite",
-                "NegativeInfinity"
-            ]
-        },
-        "pgtype.Timestamp": {
-            "type": "object",
-            "properties": {
-                "infinityModifier": {
-                    "$ref": "#/definitions/pgtype.InfinityModifier"
-                },
-                "time": {
-                    "description": "Time zone will be ignored when encoding to PostgreSQL.",
-                    "type": "string"
-                },
-                "valid": {
-                    "type": "boolean"
                 }
             }
         }
