# internal/transport/http/v1/auth_handler.go
@@ -5,28 +5,9 @@ import (
 
 	"github.com/ali-nur31/mile-do/internal/domain"
 	"github.com/ali-nur31/mile-do/internal/service"
+	"github.com/ali-nur31/mile-do/internal/transport/http/v1/dto"
 	"github.com/labstack/echo/v4"
 )
-
-type refreshAccessTokenRequest struct {
-	RefreshToken string `json:"refresh_token"`
-}
-
-type registerUserRequest struct {
-	Email           string `json:"email"`
-	Password        string `json:"password"`
-	ConfirmPassword string `json:"confirm_password"`
-}
-
-type loginUserRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
-
-type authUserResponse struct {
-	AccessToken  string `json:"access_token"`
-	RefreshToken string `json:"refresh_token"`
-}
 
 type AuthHandler struct {
 	service service.UserService
@@ -44,36 +25,31 @@ func NewAuthHandler(service service.UserService) *AuthHandler {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        input body registerUserRequest true "Account Info"
-// @Success      201  {object}  authUserResponse
+// @Param        input body dto.RegisterUserRequest true "Account Info"
+// @Success      201  {object}  dto.AuthUserResponse
 // @Failure      400  {object}  map[string]string "Bad Request"
-// @Failure      500  {object}   map[string]string "Internal Server Error"
+// @Failure      500  {object}  map[string]string "Internal Server Error"
 // @Router       /auth/register [post]
 func (h *AuthHandler) RegisterUser(c echo.Context) error {
-	var request registerUserRequest
+	var request dto.RegisterUserRequest
 
 	if err := c.Bind(&request); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "bad request"})
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "bad request", "error": err.Error()})
 	}
 
 	if request.Password != request.ConfirmPassword {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "passwords do not match"})
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "bad request", "error": "passwords do not match"})
 	}
 
-	input := domain.UserInput{
+	output, err := h.service.CreateUser(c.Request().Context(), domain.UserInput{
 		Email:    request.Email,
 		Password: request.Password,
-	}
-
-	data, err := h.service.CreateUser(c.Request().Context(), input)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
-	}
-
-	return c.JSON(http.StatusCreated, authUserResponse{
-		AccessToken:  data.AccessToken,
-		RefreshToken: data.RefreshToken,
 	})
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "internal server error", "error": err.Error()})
+	}
+
+	return c.JSON(http.StatusCreated, dto.ToAuthUserResponse(output))
 }
 
 // LoginUser godoc
@@ -82,32 +58,27 @@ func (h *AuthHandler) RegisterUser(c echo.Context) error {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        input body loginUserRequest true "Account Info"
-// @Success      202  {object}  authUserResponse
+// @Param        input body dto.LoginUserRequest true "Account Info"
+// @Success      202  {object}  dto.AuthUserResponse
 // @Failure      400  {object}  map[string]string "Bad Request"
 // @Failure      500  {object}  map[string]string "Internal Server Error"
 // @Router       /auth/login [post]
 func (h *AuthHandler) LoginUser(c echo.Context) error {
-	var request loginUserRequest
+	var request dto.LoginUserRequest
 
 	if err := c.Bind(&request); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "bad request"})
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "bad request", "error": err.Error()})
 	}
 
-	input := domain.UserInput{
+	output, err := h.service.LoginUser(c.Request().Context(), domain.UserInput{
 		Email:    request.Email,
 		Password: request.Password,
-	}
-
-	data, err := h.service.LoginUser(c.Request().Context(), input)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
-	}
-
-	return c.JSON(http.StatusAccepted, authUserResponse{
-		AccessToken:  data.AccessToken,
-		RefreshToken: data.RefreshToken,
 	})
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "internal server error", "error": err.Error()})
+	}
+
+	return c.JSON(http.StatusAccepted, dto.ToAuthUserResponse(output))
 }
 
 // RefreshAccessToken godoc
@@ -116,16 +87,16 @@ func (h *AuthHandler) LoginUser(c echo.Context) error {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        input body refreshAccessTokenRequest true "Refresh token"
-// @Success      200  {object}  authUserResponse
+// @Param        input body dto.RefreshAccessTokenRequest true "Refresh token"
+// @Success      200  {object}  dto.AuthUserResponse
 // @Failure      400  {object}  map[string]string "Bad Request"
 // @Failure      500  {object}  map[string]string "Internal Server Error"
 // @Router       /auth/refresh [post]
 func (h *AuthHandler) RefreshAccessToken(c echo.Context) error {
-	var request refreshAccessTokenRequest
+	var request dto.RefreshAccessTokenRequest
 
 	if err := c.Bind(&request); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "bad request"})
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "bad request", "error": err.Error()})
 	}
 
 	output, err := h.service.RefreshTokens(c.Request().Context(), request.RefreshToken)
@@ -133,8 +104,5 @@ func (h *AuthHandler) RefreshAccessToken(c echo.Context) error {
 		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "internal server error", "error": err.Error()})
 	}
 
-	return c.JSON(http.StatusOK, authUserResponse{
-		AccessToken:  output.AccessToken,
-		RefreshToken: output.RefreshToken,
-	})
+	return c.JSON(http.StatusOK, dto.ToAuthUserResponse(output))
 }
